--- a/journal/202004.md
+++ b/journal/202004.md
@@ -13,30 +13,29 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 [dcrd](https://github.com/decred/dcrd):
 
 - more parts of the codebase migrated from Go's standard big integers to specialized field types, making significant performance improvements
-- `schnorr`: improvements to safety, testing, and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
+- `schnorr` package: improvements to safety, testing, and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
 
 > A Schnorr signature is a digital signature scheme that is known for its simplicity, provable security and efficient generation of short signatures. It provides many advantages over ECDSA signatures that make them ideal for use with the only real downside being that they are not well standardized at the time of this writing.
 
 While the consensus supports Schnorr signatures, the rest of the infrastructure needed to really take advantage of their benefits is not well fleshed out, and therefore they are essentially not in widespread use yet. The goal is to remedy that.
 
+With all recent work, ECDSA and Schnorr signature verification is around [25% faster](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15862341309060voZvJ:decred.org) compared to v1.5.1.
+
 Lots of optimizations in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
 
-With all the speedups, ECDSA and Schnorr signature verification is around [25% faster](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15862341309060voZvJ:decred.org) compared to v1.5.1.
-
-The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd, while btcd has 1,290. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
+The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd and 1,290 for btcd. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
 
 The `dcrctl` command-line app that controls dcrd and dcrwallet was split out of dcrd into its own [repository](https://github.com/decred/dcrctl) to address dependency and maintenance [issues](https://github.com/decred/dcrd/issues/2133).
 
 In progress:
 
-- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? rr: I think it's referring to the proposal as providing a spec of sorts }
+- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
 - new [`addtransaction`](https://github.com/decred/dcrwallet/pull/1712) command that will be particularly useful for the upcoming ticket-based VSP design
 - bug fixes and code maintenance
-
-dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd and has 137 of its own forks as of writing.
+- dcrwallet is no longer a fork of [btcwallet](https://github.com/btcsuite/btcwallet) for the same reasons as dcrd and has 137 of its own forks as of writing
 
 In progress:
 
@@ -45,13 +44,13 @@ In progress:
 [Decrediton](https://github.com/decred/decrediton):
 
 - [first](https://github.com/decred/decrediton/pull/2448) [steps](https://github.com/decred/decrediton/pull/2449) to migrate to functional components (a newer [approach](https://programmingwithmosh.com/react/react-functional-components/) in the React framework - they are easier to reason about and test)
-- new action to [abandon transaction](https://github.com/decred/decrediton/pull/2467) that are not being mined or got "stuck"
+- new action to [abandon transactions](https://github.com/decred/decrediton/pull/2467) that are not being mined or got "stuck"
 - [started](https://github.com/decred/decrediton/pull/2457) reusing the pi-ui library for several components in order to have consistent look & feel across Decred's different products
-- first [steps](https://github.com/decred/decrediton/pull/2452) towards [CSPP support](https://github.com/decred/decrediton/issues/2455) { any rough estimate how much % is ready for CSPP? }
+- first [steps](https://github.com/decred/decrediton/pull/2452) towards [CSPP support](https://github.com/decred/decrediton/issues/2455)
 
 [Politeia](https://github.com/decred/politeia):
 
-- new [method](https://github.com/decred/politeia/pull/1137) to query line items that have been billed to the given proposal
+- new [method](https://github.com/decred/politeia/pull/1137) to query invoice line items that have been billed to the given proposal
 - [separated](https://github.com/decred/politeia/pull/1175) metadata out of Politeia proposals and CMS invoices - this removes a hacky way to store proposal title that was used previously and allows to add arbitrary metadata, including the fields required by the RFP proposals
 - part of the work to allow viewing Politeia [without javascript](https://github.com/decred/politeiagui/pull/1833)
 - normalized and added [caching](https://github.com/decred/politeiagui/pull/1844) for paywall data
@@ -60,20 +59,22 @@ In progress:
 - several UI tweaks for the CMS
 - multiple bug fixes in Politeia and CMS
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): Dependency updates and bug fixes.
+[dcrstakepool](https://github.com/decred/dcrstakepool):
+
+- dependency updates and bug fixes
 
 [dcrpool](https://github.com/decred/dcrpool):
 
 - added [cache](https://github.com/decred/dcrpool/pull/180), which improved the data flow (the hub now pushes new data into the cache instead of the GUI polling for it)
 - added pagination in several places - this completes work on the [proper UI](https://github.com/decred/dcrpool/issues/146) as provided by the designers
 - configurable [account](https://github.com/decred/dcrpool/pull/191) for paying rewards from
-- added GUI to [request a payment](https://github.com/decred/dcrpool/pull/198) manually and clear any remaining balance
+- added GUI to [request a payment](https://github.com/decred/dcrpool/pull/198) manually and clear any remaining balance (useful when leaving the pool)
 - increased test coverage
 
 [dcrlnd](https://github.com/decred/dcrlnd): In progress:
 
 - enable and test [SPV mode](https://github.com/decred/dcrlnd/pull/95) for remote wallets (see [March issue](202003.md#development) for more background)
-- [porting](https://github.com/decred/dcrlnd/pull/99) upstream lnd changes between v0.9.0-beta and 0.10.0-beta
+- [porting](https://github.com/decred/dcrlnd/pull/99) upstream lnd changes between v0.9.0-beta and 0.10.0-beta - 139 upstream PRs (plus a few non-PR'd commits) were considered for inclusion.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
@@ -84,13 +85,13 @@ In progress:
 - [encryption](https://github.com/decred/dcrdex/pull/259) for the signing key
 - [anarchy](https://github.com/decred/dcrdex/pull/268) setting
 - connected [order book](https://github.com/decred/dcrdex/pull/278) on the /markets page { clarify please }
-- [secure input](https://github.com/decred/dcrdex/pull/246) of sensitive arguments
+- [secure input](https://github.com/decred/dcrdex/pull/246) of sensitive command-line arguments
 - bug fixes, code refactoring, logging and testing improvements
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
 - redesigned [landing](https://github.com/decred/dcrandroid/pull/451) page
-- [switch](https://github.com/decred/dcrandroid/pull/461) on tap between DCR and a fiat equivalent on the Send view
+- [switch](https://github.com/decred/dcrandroid/pull/461) by tap between DCR and a fiat equivalent on the Send page
 - added [French](https://github.com/decred/dcrandroid/pull/423) translation
 - other UX tweaks and bug fixes
 
@@ -118,9 +119,11 @@ Detailed guides how to [query dcrdata](https://stakey.club/en/querying-dcrdata/)
 - basic support for [GCS filters](https://github.com/decred/tinydecred/pull/149)
 - further increased test coverage in a [crusade](https://github.com/decred/tinydecred/issues/70) for an unforgiving test suite
 - all tests have been migrated to [pytest](https://github.com/decred/tinydecred/pull/161)
-- boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds. Fast tests allow productive development and are a joy of life.
+- boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds (fast tests allow productive development and are a joy of life)
 
-[docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/1087) a [page](https://docs.decred.org/advanced/mnemonic-seed/) documenting the differences between Decred and BIP-0039 seeds.
+[docs](https://github.com/decred/dcrdocs):
+
+- [added](https://github.com/decred/dcrdocs/pull/1087) a [page](https://docs.decred.org/advanced/mnemonic-seed/) documenting the differences between Decred and BIP-0039 seeds
 
 [decred.org](https://github.com/decred/dcrweb):
 
@@ -129,8 +132,8 @@ Detailed guides how to [query dcrdata](https://stakey.club/en/querying-dcrdata/)
 
 Other:
 
-- the [release](https://github.com/decred/release) tool for building reproducible executables was moved under the `decred` GitHub org.
-- @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues) for implementing his metrics in dcrdata { correct? keep? }
+- the [release](https://github.com/decred/release) tool for building reproducible executables was moved under the `decred` GitHub org
+- @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues) for implementing his metrics in dcrdata { correct? }
 - GitHub has made all core features [free for everyone](https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans), which includes private repos for unlimited users
 
 Dev activity stats for April: 313 active PRs, 247 master commits, 39K added and 23K deleted lines spread across 16 repositories. Contributions came from 2-7 developers per repository.
