People-Integ polish

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -152,7 +152,7 @@ Community stats as of May 1:
 - YouTube subscribers: 3,990 (+10)
 - Facebook followers: 3,618 (+12), likes: 3,280 (+7)
 - LinkedIn followers: 774 (+30)
-- GitHub dcrd stars: 539 (+3), forks: 235 (-1,272) - past fork counts included all btcd forks which was misleading, this was fixed by removing the fork relationship with btcd on GitHub
+- GitHub dcrd stars: 539 (+3), forks: 235 (-1,272) - past fork counts included all btcd forks which was misleading, now that the fork relationship with btcd is removed the number is dcrd's own forks
 
 ## Governance
 
@@ -180,7 +180,7 @@ Updates from @Checkmate:
 
 ## Integrations
 
-[dcr.blue](https://dcr.blue/) VSP announced that it will shut down in a message sent to all users with verified email on Apr 20. It was [removed](https://github.com/decred/dcrwebapi/pull/97) from the [listing](https://www.decred.org/vsp/) and Decrediton but will stay online for the rest of 2020. Since the maximum lifetime of a ticket is roughly 4.7 months, this gives users around 3 months to stop buying tickets assigned to DCR.Blue. Users are advised to backup their redeem scripts if they haven't already (a copy is available in the VSP account) and start buying tickets to a different VSP. Please avoid picking too large VSPs to maintain a healthy distribution and better security for the network. This is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past.
+[dcr.blue](https://dcr.blue/) VSP announced that it will shut down in a message sent to all users with verified email on Apr 20. It was [removed](https://github.com/decred/dcrwebapi/pull/97) from the [listing](https://www.decred.org/vsp/) and Decrediton but will stay online for the rest of 2020. Since the maximum lifetime of a ticket is roughly 4.7 months, this gives users around 3 months to stop buying tickets assigned to DCR.Blue. Users are advised to backup their redeem scripts if they haven't already (a copy is available in the VSP account) and start buying tickets to a different VSP. Please avoid joining too large VSPs to maintain a healthy distribution and better security for the network. This is the first VSP to attempt a "graceful shutdown" rather than just disappearing without notice as some other VSPs have done in the past.
 
 [decred.raqamiya.net](https://decred.raqamiya.net/) VSP that was [delisted](https://github.com/decred/dcrwebapi/pull/95) in March is now again operational and was [added back](https://github.com/decred/dcrwebapi/pull/96) to the listing. As of writing, it holds about 330 live tickets (0.8%), has 4 servers, and features a custom UI.
 
@@ -190,7 +190,7 @@ Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [s
 
 An instant exchange [SwapSpace](https://swapspace.co/) [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
 
-[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a [light version](https://twitter.com/steelbackup/status/1248058631523905538) of the product. Currently, there are two types of products: [laser engraved](https://steelbackup.com/product/decred-laser-engraved/) and [laser marked](https://steelbackup.com/product/decred-laser-marked/). The engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with molybdenum disulfide solution which makes it resistant to scratches, acids, and high temperature (up to 340 degrees C). The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. SteelBackup launched in Feb 2020 by @zubair and ships worldwide.
+[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a [light version](https://twitter.com/steelbackup/status/1248058631523905538) of the product. Currently, there are two types of steel plates: [laser engraved](https://steelbackup.com/product/decred-laser-engraved/) and [laser marked](https://steelbackup.com/product/decred-laser-marked/). The engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with molybdenum disulfide solution which makes it resistant to scratches, acids, and high temperature (up to 340 degrees C). The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. Tamper evident bags are included. SteelBackup was launched in Feb 2020 by @zubair and ships worldwide.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
