--- a/journal/202004.md
+++ b/journal/202004.md
@@ -15,15 +15,15 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 - more parts of the codebase migrated from Go's standard big integers to specialized field types, making significant performance improvements
 - `schnorr` package: improvements to safety, testing, and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
 
-> A Schnorr signature is a digital signature scheme that is known for its simplicity, provable security and efficient generation of short signatures. It provides many advantages over ECDSA signatures that make them ideal for use with the only real downside being that they are not well standardized at the time of this writing.
+> A Schnorr signature is a digital signature scheme that is known for its simplicity, provable security, and efficient generation of short signatures. It provides many advantages over ECDSA signatures that make them ideal for use with the only real downside being that they are not well standardized at the time of this writing.
 
-While the consensus supports Schnorr signatures, the rest of the infrastructure needed to really take advantage of their benefits is not well fleshed out, and therefore they are essentially not in widespread use yet. The goal is to remedy that.
+While the consensus supports Schnorr signatures, the rest of the infrastructure needed to completely take advantage of their benefits is not well fleshed out, and therefore they are essentially not in widespread use yet. The goal is to remedy that.
 
 With all recent work, ECDSA and Schnorr signature verification is around [25% faster](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15862341309060voZvJ:decred.org) compared to v1.5.1.
 
 Lots of optimizations in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and [banning](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$158650272611269MJQhM:decred.org) it. The "banning rate" parameters will have to be adjusted to reflect the new speeds.
 
-The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That really is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd and 1,290 for btcd. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
+The dcrd repository is no longer configured as a fork of [btcd](https://github.com/btcsuite/btcd). So many new features have been added and overall improvements made that there is very little code still in common between them. Also, one of the primary reasons for having a fork is to be able to pull in upstream changes easily. That is not the case anymore though because the code is so different that any changes desired for dcrd would effectively have to be ported anyway. And even then, most changes made in btcd simply don't apply to dcrd anymore. The "unforking" also removes the confusion about the fork count where dcrd page showed the number of all forks of btcd (1,500+). Now it shows 235 forks for dcrd and 1,290 for btcd. Finally, it removes the annoyance and a chance for error where pressing "New pull request" would open a PR against the upstream btcd repository with all the changes on Decred's master branch.
 
 The `dcrctl` command-line app that controls dcrd and dcrwallet was split out of dcrd into its own [repository](https://github.com/decred/dcrctl) to address dependency and maintenance [issues](https://github.com/decred/dcrd/issues/2133).
 
@@ -111,7 +111,7 @@ In progress:
 - searching for a transaction [outpoint](https://github.com/decred/dcrdata/pull/1711)
 - bug fixes
 
-Detailed guides how to [query dcrdata](https://stakey.club/en/querying-dcrdata/) and how to run [your own instance](https://stakey.club/en/dcrdata-running-your-own-block-explorer/) of the block explorer were published by @mm in both English and [Portuguese](https://stakey.club/pt/articles/).
+Detailed guides on how to [query dcrdata](https://stakey.club/en/querying-dcrdata/) and how to run [your own instance](https://stakey.club/en/dcrdata-running-your-own-block-explorer/) of the block explorer were published by @mm in both English and [Portuguese](https://stakey.club/pt/articles/).
 
 [tinydecred](https://github.com/decred/tinydecred):
 
@@ -190,7 +190,7 @@ Metal Pay [added](https://twitter.com/metalpaysme/status/1249745420206686208) [s
 
 An instant exchange [SwapSpace](https://swapspace.co/) [added](https://twitter.com/SwapSpaceCo/status/1250078395884539906) support for Decred.
 
-[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a [light version](https://twitter.com/steelbackup/status/1248058631523905538) of the product. Currently, there are two types of steel plates: [laser engraved](https://steelbackup.com/product/decred-laser-engraved/) and [laser marked](https://steelbackup.com/product/decred-laser-marked/). The engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with molybdenum disulfide solution which makes it resistant to scratches, acids, and high temperature (up to 340 degrees C). The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. Tamper evident bags are included. SteelBackup was launched in Feb 2020 by @zubair and ships worldwide.
+[Steelbackup](https://steelbackup.com/), a physical seed backup solution added a [light version](https://twitter.com/steelbackup/status/1248058631523905538) of the product. Currently, there are two types of steel plates: [laser engraved](https://steelbackup.com/product/decred-laser-engraved/) and [laser marked](https://steelbackup.com/product/decred-laser-marked/). The engraved one is the most robust solution as steel is removed which makes the marking grid as permanent as the steel. The laser marked product is marked with a molybdenum disulfide solution which makes it resistant to scratches, acids, and high temperatures (up to 340 degrees C). The products are designed to be simple with no moving parts, users just need a center punch (found at a local hardware store) to indent their seed. Tamper evident bags are included. SteelBackup was launched in Feb 2020 by @zubair and ships worldwide.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -223,7 +223,7 @@ Attended:
 
 - Apr 4 - [Paxful Conversations](https://twitter.com/paxful_LATAM/status/1245066931155148800) - Internet. @elian was invited by Paxful LATAM to talk about how to spot scams and what to look at when researching cryptocurrency fundamentals. It was not a direct Decred talk but it was mentioned as an example of good practices within the industry. The webinar was "powered by Decred" and was viewed by ~70 people.
 - Apr 9 - Hablemos Decred 03 - Internet. @pablito and @elian explained the PoS system. There were only 3 new viewers this time, although some lessons were learned about promoting the event and picking the optimal time. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200409-hablemosdecred-03-internet.md))
-- Apr 16 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. Decred team presented a panel titled "The future of money and remote work" with the goal to explore the intersection of money, technology and remote working through the lens and experience of 4 Decred contractors in LATAM. They shared their experience working from Argentina, Colombia and Mexico, and covered the challenges and opportunities of working for Decred remotely. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-talent-land-at-home-internet.md))
+- Apr 16 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. Decred team presented a panel titled "The future of money and remote work" to explore the intersection of money, technology, and remote working through the lens and experience of 4 Decred contractors in LATAM. They shared their experience working from Argentina, Colombia, and Mexico, and covered the challenges and opportunities of working for Decred remotely. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-talent-land-at-home-internet.md))
 - Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through its innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
 - Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore the best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
 - Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I). { how many people joined? how did it go? }
@@ -231,7 +231,7 @@ Attended:
 Upcoming:
 
 - May 12 - Decred Foundations at Consensus Distributed - Internet { link will be ready soon }. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In ChangeLog, @jy-p gives a review of the year's progress across all of the major aspects of the project. In Construct, @richardred checks in contributors to some important Decred subprojects to find out what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The third segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics.
-- May 14 - [Virtual meetup with BlockainEx](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. Decred will participate in the panel "What is decentralized governance and DAOs?" co-hosted by @adcade and @caibarrad from Decred, Nadia Alvarez from MakerDAO, Gustavo Segovia from Colony and Jhonny Gomez from BlockainEx. This panel will be livestreamed to the blockchain community in Colombia.
+- May 14 - [Virtual meetup with BlockainEx](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. Decred will participate in the panel "What is decentralized governance and DAOs?" co-hosted by @adcade and @caibarrad from Decred, Nadia Alvarez from MakerDAO, Gustavo Segovia from Colony and Jhonny Gomez from BlockainEx. This panel will be live-streamed to the blockchain community in Colombia.
 - May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments on the pipeline.
 - May 25 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 
@@ -249,7 +249,7 @@ Selected articles:
 - The Bitcoin time machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred
 - What if Bitcoin had a Treasury? by Ryan Watkins ([messari.io](https://messari.io/article/what-if-bitcoin-had-a-treasury), paywalled)
 - Project Rundown interview with Decred by The Capital (former Altcoin Magazine, [medium](https://medium.com/the-capital/project-rundown-interview-with-decred-on-the-capital-8b647919a339))
-- Lets talk about Decred and remote work by @adcade (in Spanish, [medium](https://medium.com/decred-es/hablemos-decred-sobre-el-proyecto-y-sobre-el-trabajo-remoto-e5a2510364ae))
+- Let's talk about Decred and remote work by @adcade (in Spanish, [medium](https://medium.com/decred-es/hablemos-decred-sobre-el-proyecto-y-sobre-el-trabajo-remoto-e5a2510364ae))
 - Article on the 4th Decred virtual meetup about CEXes and DEXes (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-organizes-virtual-meeting-on-decentralized-exchanges-for-the-spanish-speaking-community))
 
 Translations:
@@ -277,12 +277,12 @@ Audio:
 
 Selected Reddit posts:
 
-- The Decred Journal's own reddit [post](https://www.reddit.com/r/decred/comments/fy493y/decred_journal_march_2020/) was the most discussed one on the subreddit this month with 42 comments!
+- The Decred Journal's own Reddit [post](https://www.reddit.com/r/decred/comments/fy493y/decred_journal_march_2020/) was the most discussed one on the subreddit this month with 42 comments!
 - The discussion of @bee's idea to add [vote reason](https://github.com/decredcommunity/issues/issues/118) information to Politeia votes [concluded](https://www.reddit.com/r/decred/comments/g2ozqc/reason_bits_for_politeia_no_votes_feature_idea/) that implementing it properly requires a privacy solution like a blind voting scheme.
 - Phase 1 market making report [discussion](https://www.reddit.com/r/decred/comments/g5he83/decred_market_maker_monitoring_phase_1_wrapup/) speculated about the rate of adoption.
 - [Perspectives](https://www.reddit.com/r/decred/comments/g66onn/perspectives/) thread collected 33 comments of which many are long read quality thinking.
 - [Decred: Do Different](https://www.reddit.com/r/decred/comments/g66msa/decred_challenge_do_different/) mini-game.
-- The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) discussing @Checkmate's methology of comparing the attack cost of Decred and other chains.
+- The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) discussing @Checkmate's methodology of comparing the attack cost of Decred and other chains.
 
 Selected Twitter discussions:
 
@@ -313,7 +313,7 @@ There have been a whole [barrage](https://www.theblockcrypto.com/post/60930/top-
 
 USDT balance held on exchanges has reached a new ATH of [$1.8 billion](https://twitter.com/glassnodealerts/status/1253343292403724294) on Apr 23, according to glassnode alerts.
 
-Content platforms like Google, YouTube and Facebook have decided that the only true information about COVID-19 is the one coming from the World Health Organization (which has just [lost](https://www.bbc.com/news/world-us-canada-52289056) the U.S. funding for some reason) and began to actively redirect people to WHO and [suppress](https://www.bbc.com/news/technology-52198946) any content that challenges their narrative. YouTube in particular is fighting the "wrong" videos as they get reuploaded, but it seems to only delete videos that go viral and gain around a million views in short time. [ZeroHedge](https://www.zerohedge.com/health/youtube-deletes-viral-video-claiming-dr-fauci-spewing-absolute-propaganda-about-coronavirus) has put it well: "any thoughts, opinions, or speculation which challenges the official narratives regarding COVID-19 will be promptly silenced by Silicon Valley, under the guise of protecting the public - which apparently can't be trusted to absorb information and form their own opinions". Reaction from SV and The Media to the "misinformation" has an interesting pattern - they post tons of content that attempts to debunk the wrongthink claims, but they also delete these claims from their platforms and never reference them directly. It is like saying "This information is wrong, but you are not allowed to know it".
+Content platforms like Google, YouTube and Facebook have decided that the only true information about COVID-19 is the one coming from the World Health Organization (which has just [lost](https://www.bbc.com/news/world-us-canada-52289056) the U.S. funding for some reason) and began to actively redirect people to WHO and [suppress](https://www.bbc.com/news/technology-52198946) any content that challenges their narrative. YouTube, in particular, is fighting the "wrong" videos as they get reuploaded, but it seems to only delete videos that go viral and gain around a million views in a short time. [ZeroHedge](https://www.zerohedge.com/health/youtube-deletes-viral-video-claiming-dr-fauci-spewing-absolute-propaganda-about-coronavirus) has put it well: "any thoughts, opinions, or speculation which challenges the official narratives regarding COVID-19 will be promptly silenced by Silicon Valley, under the guise of protecting the public - which apparently can't be trusted to absorb information and form their own opinions". Reaction from SV and The Media to the "misinformation" has an interesting pattern - they post tons of content that attempts to debunk the wrongthink claims, but they also delete these claims from their platforms and never reference them directly. It is like saying "This information is wrong, but you are not allowed to know it".
 
 In an update to the story about the sale of .org domain to a private equity firm, ICANN has [voted](https://twitter.com/EFF/status/1256053946289774594) to reject the sale, effectively blocking it.
 
