--- a/journal/202004.md
+++ b/journal/202004.md
@@ -4,7 +4,15 @@
 
 _Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
 
-{introduction, major news of the month ordered by impact, don't put any links here}
+Aprils' highlights:
+
+- { dcrd optimizations }
+- { decentralized treasury spending WIP published }
+- { another hot dev month for dcrdex, get a highlight from a dev if possible }
+- { 5 new first-time contributors on GitHub (quite high number compared to past months) }
+- { 2 fiat on-ramps Metal Pay and Transak }
+- { maybe: steelbackup serious way to store your seed }
+- { physical events down, virtual events up and our organizers are exploring tools }
 
 ## Development
 
