--- a/journal/202004.md
+++ b/journal/202004.md
@@ -239,8 +239,8 @@ Attended:
 Upcoming:
 
 - May 12 - [Decred Foundations at Consensus Distributed](https://next.brella.io/events/consensusdistributed/schedule/118434) (requires signup at brella.io to view and "attend") -  Internet. Consensus Distributed is the remote replacement for the annual Consensus conference, and Decred is one of the projects which was invited to contribute an hour of content, broken into 3 segments. In Construct, @richardred checks in with contributors to some important Decred subprojects to find out what they're about and what the latest is. Featuring @lukebp on Politeia, @matheusd on dcrlnd, @chappjc, and @buck54321 on dcrdex, dcrdata and TinyDecred. The second segment is Trade Secrets, where @Checkmate will be giving a quick intro to his top 5 Decred on-chain metrics. To finish, @jy-p will present a review of the year's progress across all of the major aspects of the project in ChangeLog, followed by a 10 minute live Q&A with Lucas Nuzzi. Video will be available on the Coindesk website afterwards, and an extended version of Trade Secrets will be uploaded to Youtube.
-- May 14 - [Virtual meetup with BlockainEx](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. Decred will participate in the panel "What is decentralized governance and DAOs?" co-hosted by @adcade and @caibarrad from Decred, Nadia Alvarez from MakerDAO, Gustavo Segovia from Colony and Jhonny Gomez from BlockainEx. This panel will be live-streamed to the blockchain community in Colombia.
-- May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments on the pipeline.
+- May 14 - [Virtual meetup with BlockchainEx](https://twitter.com/Decred_ES/status/1258905004510973953) - Internet. Decred will participate in the panel "What is decentralized governance and DAOs?" co-hosted by @adcade and @caibarrad from Decred, Nadia Alvarez from MakerDAO, Gustavo Segovia from Colony and Jhonny Gomez from BlockchainEx. This panel will be live-streamed to the blockchain community in Colombia.
+- May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments in the pipeline.
 - May 25 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 
 ## Media
