Drop some todos

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -141,7 +141,7 @@ Detailed guides on how to [query dcrdata](https://stakey.club/en/querying-dcrdat
 Other:
 
 - the [release](https://github.com/decred/release) tool for building reproducible executables was moved under the `decred` GitHub org
-- @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/blob/master/research_articles/checkonchain_charts/checkonchain_charts.md) for implementing his metrics { correct? }
+- @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/blob/master/research_articles/checkonchain_charts/checkonchain_charts.md) for implementing his metrics
 - GitHub has made all core features [free for everyone](https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans), which includes private repos for unlimited users
 
 Dev activity stats for April: 313 active PRs, 247 master commits, 39K added and 23K deleted lines spread across 16 repositories. Contributions came from 2-7 developers per repository.
@@ -234,7 +234,7 @@ Attended:
 - Apr 16 - [Jalisco Talend Land @ Home](https://www.talent-land.tv/) - Internet. Decred team presented a panel titled "The future of money and remote work" to explore the intersection of money, technology, and remote working through the lens and experience of 4 Decred contractors in LATAM. They shared their experience working from Argentina, Colombia, and Mexico, and covered the challenges and opportunities of working for Decred remotely. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-talent-land-at-home-internet.md))
 - Apr 16 - Hablemos de Criptomonedas - Internet. The webinar was co-hosted with Ibero University through its innovation hub IDIT. @adcade and @elian talked about cryptocurrency and blockchain to an audience of 22 (out of 34 registrations), mostly students. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200416-hablemos-de-criptomonedas-internet.md))
 - Apr 23 - Hablemos Decred 04 - Internet. @pablito and @elian focused on exchanges and the DEX that Decred is building. Attendance was up to 15 this time, and the LATAM team is continuing to explore the best ways to host such events. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200423-hablemosdecred-04-internet.md))
-- Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I). { how many people joined? how did it go? }
+- Apr 30 - [Decred Virtual Meetup](https://www.meetup.com/Decred-Australia/events/270252645/) - Internet. @Checkmate presented his BTC and DCR on-chain analytics. The recording was uploaded to [YouTube](https://www.youtube.com/watch?v=H_COE9A-t3I).
 
 Upcoming:
 
@@ -297,7 +297,7 @@ Selected Twitter discussions:
 - @Checkmate [tweeted](https://twitter.com/_Checkmatey_/status/1248498765113126912) about the cost to double spend attack DCR being 54x higher than BTC, stimulating much discussion.
 - @Checkmate [announced](https://twitter.com/_Checkmatey_/status/1253116008639811585) the launch of a new project, with a team of contributors working on a new Decred on-chain metrics site.
 - Messari [musing](https://twitter.com/MessariCrypto/status/1255579343973232640) on what if Bitcoin had Decred's treasury, and [graphing](https://twitter.com/MessariCrypto/status/1255579345319596033) out how much that would have been worth if Bitcoin had spent ~23% of its monthly treasury income and saved the rest.
-- @moo31337 [tweeted](https://twitter.com/marco_peereboom/status/1251174260925779977) about a WIP PR for work on the decentralized treasury spending proposal, but more than half of the comments were really concerned about his next BBQ adventure. { plz correct if BBQ is a wrong term }
+- @moo31337 [tweeted](https://twitter.com/marco_peereboom/status/1251174260925779977) about a WIP PR for work on the decentralized treasury spending proposal, but more than half of the comments were really concerned about his next cooking adventure.
 
 ## Markets
 
