--- a/journal/202004.md
+++ b/journal/202004.md
@@ -86,13 +86,11 @@ In progress:
 
 [dcrdex](https://github.com/decred/dcrdex):
 
-- [preregister](https://github.com/decred/dcrdex/pull/203) route { notable? if yes, explain a bit }
-- store [swap secret](https://github.com/decred/dcrdex/pull/243) in the matches table { notable? if yes, explain a bit }
 - [notification](https://github.com/decred/dcrdex/pull/244) system to enable live updates in the browser GUI
 - [web server](https://github.com/decred/dcrdex/pull/221) for admin commands
 - [encryption](https://github.com/decred/dcrdex/pull/259) for the signing key
 - [anarchy](https://github.com/decred/dcrdex/pull/268) setting
-- connected [order book](https://github.com/decred/dcrdex/pull/278) on the /markets page { clarify please }
+- completed the [markets page](https://github.com/decred/dcrdex/pull/278)
 - [secure input](https://github.com/decred/dcrdex/pull/246) of sensitive command-line arguments
 - bug fixes, code refactoring, logging and testing improvements
 
