--- a/journal/202004.md
+++ b/journal/202004.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – April 2020
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-202004-384.png)
 
-_Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
+_Image: Bridge Verticals by @saender_
 
 Aprils' highlights:
 
@@ -333,4 +333,4 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, elian, Exitus, l1ndseymm, pablito, richardred, s\_ben, zubair
 - reviews and feedback: chappjc, davecgh, emiliomann, jholdstock, jrick, lukebp
-- title image: {}
+- title image: saender
