--- a/journal/202004.md
+++ b/journal/202004.md
@@ -239,6 +239,10 @@ Upcoming:
 - May 14 - [Decred meetup with BlockConf](https://twitter.com/Decred_ES/status/1258165218204618759) - Internet. This will be a virtual meetup to showcase the platform and a fireside chat before the main conference. The team will give a brief on Decred's fundamentals and new developments in the pipeline.
 - May 25 - [BlockConf](https://blockconf.digital/) - Internet. Decred is a [bronze sponsor](https://twitter.com/BlockconfD/status/1251194332079697922). Decred LATAM team will run a virtual booth for Decred to answer questions from the attendees. If anyone wants to help with keeping the booth active in several time zones during the 48-hour event, please contact @elian.
 
+![Jalisco Talent Land @ Home shot](../img/latam-stakeys-360.jpg)
+
+_Image: No shortage of Stakey in LATAM_
+
 ## Media
 
 Selected articles:
