--- a/journal/202004.md
+++ b/journal/202004.md
@@ -6,13 +6,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 Aprils' highlights:
 
-- { dcrd optimizations }
-- { decentralized treasury spending WIP published }
-- { another hot dev month for dcrdex, get a highlight from a dev if possible }
-- { 5 new first-time contributors on GitHub (quite high number compared to past months) }
-- { 2 fiat on-ramps Metal Pay and Transak }
-- { maybe: steelbackup serious way to store your seed }
-- { physical events down, virtual events up and our organizers are exploring tools }
+- The optimizations continue for dcrd, which got so much faster it got banned by older versions and the banning criteria have to be updated. 
+- @moo31337 published a WIP PR for the work on decentralization of Treasury spending.
+- We welcome 5 new contributors to the Decred GitHub repositories!
+- It's been a big month for integrations, with the gateways Transak and Metal Pay. Steelbackup (metal DCR seed storage solution) also added a new budget option.
+- In-person events are off, but virtual events are way up, especially in Latam!
 
 ## Development
 
