add todo to check for DCCs

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -54,6 +54,8 @@ Dev activity stats for May: {n} active PRs, {n} master commits, {n}K added and {
 
 Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: username ([repo](link to user's commits))}
 
+{check for new DCCs}
+
 {welcome new corporate contractors with short intros, if any}
 
 {updates from existing contractors}
