add from twitter up till May 22

--- a/journal/202005.md
+++ b/journal/202005.md
@@ -12,7 +12,11 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd):
+
+In progress:
+
+- TSPEND opcode needed for decentralized control of the Treasury by the stakeholders was successfully [tested](https://twitter.com/marco_peereboom/status/1263185839028350976) on testnet.
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
@@ -23,6 +27,7 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 [Politeia](https://github.com/decred/politeia):
 
 - RFP proposal support https://github.com/decred/politeia/pull/1054 { huge item, long in the making } { how "done" is it? }
+- All contractor vote https://github.com/decred/politeia/pull/1104 { huge too }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
@@ -30,9 +35,13 @@ In progress:
 
 - Work towards ticket-based VSP https://github.com/decred/dcrstakepool/pull/625
 
-[dcrpool](https://github.com/decred/dcrpool): {}
+[dcrpool](https://github.com/decred/dcrpool):
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+- release candidate incoming https://twitter.com/dnldd/status/1263493308099301376 { get more info }
+
+[dcrlnd](https://github.com/decred/dcrlnd):
+
+- Demo of swapping DCR and BTC via LN { wow, get more on this! } https://twitter.com/matheusd_tech/status/1263118566418776065
 
 [cspp](https://github.com/decred/cspp): {}
 
@@ -43,10 +52,13 @@ In progress:
 - v1.5 testnet
   - https://www.reddit.com/r/decred/comments/gfjmpy/android_and_ios_mobile_wallets_v15_testnet/
   - https://twitter.com/raedahgroup/status/1258461552400728065
+  - { list changes and make it clear since what point these changes are, e.g. since v1.4 mainnet release? }
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
+
+- 5.3 beta https://twitter.com/decredexplorer/status/1262827698986127360 { release notes? }
 
 [tinydecred](https://github.com/decred/tinydecred): {}
 
@@ -58,7 +70,8 @@ In progress:
 
 Other:
 
-- {smaller items go here}
+- https://bounty.decred.org/2020/05/status-update/
+- Some developers are more active on Twitter now with the dev updates. You can follow https://twitter.com/lukebp_ , https://twitter.com/marco_peereboom, https://twitter.com/degeri_crypto and others to get more of those.
 
 Dev activity stats for May: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
@@ -71,6 +84,8 @@ Welcome to new first time contributors with code merged to master: {list people 
 {welcome new corporate contractors with short intros, if any}
 
 {updates from existing contractors}
+
+- Three Decred community members were [included](https://twitter.com/Decred_BR/status/1262454667700768769) in the list of top 50 names in the Brazilian Crypto Market by Cointelegraph: Rafaela Romano in #35, Gabriel Rhama in #31 and the number one Edilson Osório Jr.
 
 {interviews about people}
 
@@ -92,6 +107,8 @@ Community stats:
 In May the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using May's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At April's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+
+https://blockcommons.red/politeia-digest/issue031/
 
 ## Network
 
@@ -120,6 +137,12 @@ Nodes: Throughout [May](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1
 
 {any interesting analysis or events in the network}
 
+- https://formalverification.substack.com/p/in-the-network-decred
+  - new metric analyzed is the ratio of hashrate to USD block reward which represents miners' risk
+  - notes a decline of several metrics since Jan 2020
+
+> The key takeaway here is Decred is trading at PoW issuance to-date. If we assume miners operate at near marginal costs, Decred is no longer trading at a premium to total miner USD input like we saw in 2017 and the first half of 2018. This also does not even factor in the resource costs by stakers who also play a crucial role in Decred’s consensus layer which we will cover next. Put differently, Decred is trading at a loss relative to total USD input to the network (PoW and PoS).
+
 ## Integrations
 
 { hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
@@ -140,10 +163,14 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
-{ PR work? noting just in case }
+{ media mentions and quotes. noting just in case. If this is PR work, mark it so. If any mentions are not a result of PR, we might want a separate bullet list for mentions. }
 
 - https://www.forbes.com/sites/cbovaird/2020/05/05/is-this-the-perfect-time-for-central-bank-digital-currencies/
 - https://cointelegraph.com/news/bitcoin-s-halving-incentivizes-miners-to-sell-for-double-decred-co-founder-says
+- https://www.reuters.com/article/us-crypto-currencies-bitcoin-idUSKBN22K2KW
+- https://cointelegraph.com/news/stairway-to-scarcity-bitcoin-sentiment-to-rise-despite-halving-impact
+- https://cointelegraph.com/news/top-experts-make-bitcoin-price-predictions-as-btc-halving-approaches
+- https://www.financemagnates.com/cryptocurrency/news/will-the-upcoming-halving-increase-bitcoins-price/
 
 ## Events
 
@@ -170,7 +197,9 @@ Upcoming:
 Selected articles:
 
 - https://medium.com/@permabullnino/decred-on-chain-mining-pulse-3b28d5155a04
-- https://medium.com/coinmonks/decred-price-a-seasonality-study-414bac98bc99
+- https://medium.com/coinmonks/decred-price-a-seasonality-study-414bac98bc99 { keep in Markets only or also a copy here? }
+- https://twitter.com/svitekpavel/status/1261922070537125888 { looks interesting, is there a public link? }
+- https://formalverification.substack.com/p/in-the-network-decred
 
 Translations:
 
@@ -179,16 +208,20 @@ Translations:
 Videos:
 
 - Decred bi-Weekly News Update - May 3rd, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=oHqzvN3TMU0))
-- Trade Secrets Feat. Decred On-Chain Analyst Checkmate - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=NOyyAx6Ab_0)) - @Checkmate talking about HODL conviction signals, realized price and MVRV, 142-day sum of USD ticket value, block subsidy valuation, transaction demand, and Treasury flows
-- Decred Construct DEX Interview Feat. Devs Brian Stafford and Jon Chappelow - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=fS9j7RaawjY))
 - Decred Construct Feat. Devs Luke Powell & Matheus Degiovani on Politeia + LN - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=HexsUmqA7-Y))
+- Decred Construct DEX Interview Feat. Devs Brian Stafford and Jon Chappelow - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=fS9j7RaawjY))
+- Trade Secrets Feat. Decred On-Chain Analyst Checkmate - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=NOyyAx6Ab_0)) - @Checkmate talking about HODL conviction signals, realized price and MVRV, 142-day sum of USD ticket value, block subsidy valuation, transaction demand, and Treasury flows
 - Decred Changelog Overview Feat. Project Lead Jake Yocom-Piatt - Consensus 2020 ([youtube](https://www.youtube.com/watch?v=OmwI62HZerg))
 - Bull Case For Decred, On Chain Metrics & Monetary Premiums With Checkmatey ([youtube](https://www.youtube.com/watch?v=QWfq1tn8xs0)) { is it a rehash of an earlier video? }
+- Strategy & Governance Akin Sawyerr joins @JillMalandrino on @Nasdaq \#TradeTalks to discuss governance on the blockchain to build a fairer financial system for all. ([pscp.tv](https://www.pscp.tv/w/cY2NlDFvUEVMT1hMTHJ5amR8MW1yeG1RYWtQQk54eWbqoHSgE5RIg1XnvVTTODa3xIsPRngDk6gQdiXMFut-)) { is there a youtube link? }
+- https://www.tokentuber.com/video/what-is-decred-dcr-an-introduction { is this a video? }
 - https://www.youtube.com/watch?v=4fwMXos3u3A { Phoenix Green, good? }
+- Decred bi-Weekly News Update - May 22nd, 2020 by @Exitus ([youtube](https://www.youtube.com/watch?v=9i56ly5SS6M))
 
 Audio:
 
-- {}
+- https://tomluongo.me/2020/05/19/podcast-episode-34-jake-yocom-piatt-and-the-case-for-a-return-to-sovereign-money/
+  - { a couple good reviews on Twitter https://twitter.com/TFL1728/status/1262747582742159367 }
 
 ## Community Discussions
 
@@ -204,13 +237,18 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- https://twitter.com/Ammarooni/status/1259985075460063232
+- { more dev exposure on Twitter, nice! } https://twitter.com/lukebp_/status/1258139602516193280
+- @lukebp explains Politeia, CMS and the DCC process in few short tweets https://twitter.com/lukebp_/status/1262871839035977728
+- @lukebp's translation of @moo31337 console output [to English](https://twitter.com/lukebp_/status/1263213648471707648) received an unusual amount of likes and replies discussing the mechanics of voting on Treasury transactions.
 
 ## Markets
 
 In May DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+
+- https://medium.com/coinmonks/decred-price-a-seasonality-study-414bac98bc99 { DCR seems to favor Saturdays }
 
 ## Relevant External
 
