--- a/journal/202005.md
+++ b/journal/202005.md
@@ -8,11 +8,13 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
 [dcrd](https://github.com/decred/dcrd):
+
+- reworked HTTPS [seeding](https://github.com/decred/dcrd/pull/2188) { is there a place to read on HTTPS vs DNS seeding? is HTTPS superior and is Decred network migrating to it? }
+- [banning](https://github.com/decred/dcrd/pull/2110) peers that don't follow the wire protocol
+- more code migrated to the Go 1.13 error handling
 
 In progress:
 
