--- a/journal/202005.md
+++ b/journal/202005.md
@@ -6,6 +6,9 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 {introduction, major news of the month ordered by impact, don't put any links here}
 
+- vspd announcement
+- big backend changes merged in Politeia (RFP, all-contractor vote)
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -38,8 +41,22 @@ In progress:
 
 [Politeia](https://github.com/decred/politeia):
 
-- RFP proposal support https://github.com/decred/politeia/pull/1054 { huge item, long in the making } { how "done" is it? }
-- All contractor vote https://github.com/decred/politeia/pull/1104 { huge too }
+- RFP process support on the [backend](https://github.com/decred/politeia/pull/1054) and the [GUI](https://github.com/decred/politeiagui/pull/1910) - big change long in development { how "done" is it? }
+- admin utility to [change email](https://github.com/decred/politeia/pull/1178) address
+- backend support for [shorter](https://github.com/decred/politeia/issues/900) proposal URLs
+- arrow key [navigation](https://github.com/decred/politeiagui/pull/1878) for attached images
+- [workaround](https://github.com/decred/politeiagui/pull/1944) for the duplicate comments issue
+- progress towards viewing Politeia with [no javascript](https://github.com/decred/politeiagui/pull/1834) { what's the delivery/deployment status/plans? }
+- lots of bug fixes
+
+In progress:
+
+- admin feature to query [code stats](https://github.com/decred/politeia/pull/1185) for contractors
+
+CMS:
+
+- [all-contractor](https://github.com/decred/politeia/pull/1104) vote for contentious DCCs, weighted by the amount of billed hours over the previous 6 months - final part of implementing the DCC process [proposal](https://proposals.decred.org/proposals/fa38a3593d9a3f6cb2478a24c25114f5097c572f6dadf24c78bb521ed10992a4)
+- [utility](https://github.com/decred/politeia/pull/1179) to test DCC issuance and DCC vote processes
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
