--- a/journal/202005.md
+++ b/journal/202005.md
@@ -29,6 +29,10 @@ In progress:
 - ability to request blocks [concurrently](https://github.com/decred/dcrwallet/pull/1730) { is it a major speedup in SPV mode? any comment appreciated }
 - ability to save [per-ticket](https://github.com/decred/dcrwallet/pull/1737) vote preferences (step towards ticket-based VSP)
 
+In progress:
+
+- [hardened](https://github.com/decred/dcrwallet/pull/1743) account support for the next VSP API
+
 [Decrediton](https://github.com/decred/decrediton):
 
 - code refactoring, more components reused from pi-ui
