--- a/journal/202005.md
+++ b/journal/202005.md
@@ -8,6 +8,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 - vspd announcement
 - big backend changes merged in Politeia (RFP, all-contractor vote)
+- dcrpool v1.1 RC
 
 ## Development
 
@@ -76,8 +77,7 @@ vspd is a a from-scratch implementation of VSP software that will bring a huge i
 
 [dcrpool](https://github.com/decred/dcrpool):
 
-- release candidate incoming https://twitter.com/dnldd/status/1263493308099301376 { get more info }
-- Jun 1 RC { include? } https://twitter.com/dnldd/status/1267455054287601664
+v1.1 release candidate is ready for testing! This release includes [reworked](https://github.com/decred/dcrpool/pull/207) payments processing, refreshed UI/UX, higher efficiency via dcrd's work notifications, and a host of smaller improvements and bug fixes. Check the full [release notes](https://github.com/decred/dcrpool/releases/tag/v1.1.0-rc1) for details.
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
