--- a/journal/202005.md
+++ b/journal/202005.md
@@ -81,7 +81,7 @@ v1.1 release candidate is ready for testing! This release includes [reworked](ht
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-- Demo of swapping DCR and BTC via LN { wow, get more on this! } https://twitter.com/matheusd_tech/status/1263118566418776065
+- @matheusd posted a [demo](https://twitter.com/matheusd_tech/status/1263118566418776065) of swapping between BTC and DCR invoices across their respective LNs { wow, any more details? is this effectively swapping BTC for DCR? } 
 
 [cspp](https://github.com/decred/cspp): {}
 
